Started project. Developed a card system and initialised the javascript to create cards and display them on the screen.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    
+    <header>Library App</header>
+    <div id="cards-container">
+        
+    </div>
 </body>
 </html>
