Added a form that pops up and you can add your books. Still mising submit functionality

--- a/index.html
+++ b/index.html
@@ -13,5 +13,26 @@
     <div id="cards-container">
         
     </div>
+    <button id="add-book">Add Book!</button>
+    <div class="form-popup" id="form">
+        <form action="" class="form-container">
+            <h1>Enter new book</h1>
+
+            <label for="title">Book Title</label>
+            <input type="text" placeholder="Enter book title" name="title" required>
+
+            <label for="author">Author</label>
+            <input type="text" placeholder="Enter author name" name="author" required>
+
+            <label for="pages">Number of Pages</label>
+            <input type="text" placeholder="Enter number of pages" name="pages" required>
+            
+            <label for="read">Have you read it yet?</label>
+            <input type="checkbox"  name="read" required>
+
+            <button type="submit" class="btn">Submit</button>
+            <button type="button" class="btn cancel">Close</button>
+        </form>
+    </div>
 </body>
 </html>
